--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
     width: 1080px;
     margin: auto;
     height: 100%;
-    border: 2px solid black;
 }
 
 .container::after{
@@ -21,6 +20,15 @@
     clear: both;
     display: table;
     content: '';
+}
+
+.button{
+    border-radius: .1875rem;
+    background-color: #ff7a59;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    color: white;
 }
 #prima-pagina{
     height: 100vh;
@@ -94,6 +102,30 @@ background-color: red;
 #seconda-pagina{
     height: 100vh;
     background-color: #f5f8fa;
+}
+
+#test-sx-top{
+    width: 30%;
+    float: left;
+    height: 20%;
+    background-color: grey;
+}
+#test-dx-top{
+    margin-top: 2%;
+    padding-top: 4%;
+    padding-left: 2%;
+    width: 70%;
+    float: left;
+    height: 20%;
+    background-color: white;
+    margin-bottom: 2%;
+}
+
+#test-dx-top .li{
+    display: inline-block;
+}
+#test-dx-top .button{
+
 }
 
 #terza-pagina{
