--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@
     text-align: center;
     color: white;
 }
+img{
+    height: 50px;
+    width: 10px;
+    padding-bottom: 7%;
+    float: left;
+}
 
 a{
     text-decoration-line: none;
@@ -50,7 +56,7 @@ a{
    width: 50%;
    height: 100%;
    float: left;
-   background-color: yellow;
+   /* background-color: yellow; */
    padding-top: 3%;
 }
 
@@ -67,9 +73,19 @@ a{
     width: 50%;
     height: 100%;
     float: left;
-    background-color: green;
+    /* background-color: green; */
     padding-top: 3%;
 }
+
+#header-top-right a{
+    float: left;
+    color: #33475b;
+}
+ .linea{
+     display: inline-block;
+     padding-bottom: 7%;
+ }
+
 #header-bottom{
     padding-top: 80px;
     height: 160px;
