--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+/* inizio proprietà utili da reciclare */
+
 .container{
     width: 78vw;
     margin: auto;
@@ -24,10 +26,10 @@
 .button{
     border-radius: .1875rem;
     background-color: #ff7a59;
-    width: 12%;
     display: inline-block;
     text-align: center;
     color: white;
+    padding: 15px;
 }
 img{
     height: 30px;
@@ -35,10 +37,19 @@ img{
     padding-bottom: 7%;
     float: left;
 }
-
+.allineamento{
+    display: table;
+}
 a{
     text-decoration-line: none;
 }
+.linea{
+    padding-top: 15px;
+    display: inline-block;
+    text-align: center;
+}
+
+/* fine proprietà utili da reciclare */
 
 #prima-pagina{
     height: 100vh;
@@ -80,11 +91,6 @@ a{
     padding: 10px;
     font-size: 11px;
 }
- .linea{
-     padding-top: 15px;
-     display: inline-block;
-     text-align: center;
- }
 
  #uno-top-right{
      padding-left: 15px;
@@ -92,11 +98,6 @@ a{
 
 #due-top-right{
     padding-left: 4px;
-}
-
-#secblocku {
-    background-color: white;
-    color: #e66e50;
 }
 #secblockd {
     background-color: #e66e50;
@@ -119,9 +120,8 @@ hr{
 }
 #header-bottom-left img{
     margin-top: 13px;
-height: 90px;
-width: 90px;
-
+    height: 90px;
+    width: 90px;
 }
 #header-bottom-right{
     float: right;
@@ -138,33 +138,37 @@ width: 90px;
 
 #sotto-header{
     height: 70vh;
-    background-color: lightcoral;
     box-shadow: inset 0 11px 8px -10px rgba(51,71,91,0.12);
+    background-image: linear-gradient(to top right, #fef8f0, #fff3ee, #fff1ee);
+    border-bottom: 3px solid #33475b;
 }
 #img-no{
     padding-top: 9%;
     height: 100%;
     width: 30%;
-    background-color: gold;
+    /* background-color: gold; */
+    color: #33475b;
 }
 
 #img-no h1{
-    height: 20%;
-    background-color: darkgreen;
+    /* height: 20%; */
+    /* background-color: darkgreen; */
     color: #33475b;
+    font-size: 40px;
+    padding-bottom: 15px;
 }
 
 #img-no p{
     height: 20%;
-background-color: white;
+    width: auto;
+    font-size: 15px;
 }
-
-#img-no button{
-    height: 10%;
-    width: 40%;
-background-color: red;
+#img-no p:last-child  {
+    padding-top: 15px;
+    font-size: 11px;
+    width: 150px;
 }
-
+/* fine prima pagina */
 #seconda-pagina{
     height: 100vh;
     background-color: #f5f8fa;
