--- a/style.css
+++ b/style.css
@@ -51,10 +51,6 @@ a{
 
 /* fine proprietà utili da reciclare */
 
-#prima-pagina{
-    height: 100vh;
-}
-
 #header-top{
     position: fixed;
     width: 100%;
@@ -137,16 +133,14 @@ hr{
 }
 
 #sotto-header{
-    height: 80vh;
     box-shadow: inset 0 11px 8px -10px rgba(51,71,91,0.12);
     background-image: linear-gradient(to top right, #fef8f0, #fff3ee, #fff1ee);
     border-bottom: 3px solid #33475b;
 }
 #img-no{
     padding-top: 9%;
-    /* height: 100%; */
     width: 30%;
-    /* background-color: gold; */
+    padding-bottom: 8%;
     color: #33475b;
 }
 
@@ -169,36 +163,35 @@ hr{
     width: 150px;
 }
 /* fine prima pagina */
-#seconda-pagina{
-    height: 100vh;
-    padding-top: 80px;
-    background-color: #f5f8fa;
-}
+/* inizio seconda pagina */
+
 #seconda-pagina .container{
-padding-top: 50px;
+padding-top: 80px;
+box-shadow: inset 0 11px 8px -10px rgba(51,71,91,0.12);
+background-image: linear-gradient(to top right, #fef8f0, #fff3ee, #fff1ee);
 }
+
 #test-sx-top{
     width: 30%;
     float: left;
-    /* height: 20%; */
-    background-color: grey;
 }
 #test-sx-top h1{
     font-size: 40px;
 }
+#test-sx-bottom{
+    width: 30%;
+    float: left;
+    background-color: white;
+    padding: 8px;
+}
 #test-dx-top{
-    margin-top: 2%;
     padding-top: 4%;
     padding-left: 2%;
     width: 70%;
-    float: left;
-    height: 20%;
     background-color: white;
     margin-bottom: 2%;
 }
-#seconda-pagina{
-    background-color: #f5f8fa;
-}
+
 #test-dx-top .li{
     display: inline-block;
 }
@@ -206,9 +199,11 @@ padding-top: 50px;
 
 }
 
-#test-dx-bottom p{
-
+.effetto:hover{
+    padding: 30px;
 }
+
+
 
 
 #terza-pagina{
