--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a{
 .linea{
     padding-top: 15px;
     display: inline-block;
-    text-align: center;
+    /* text-align: center; */
 }
 
 /* fine proprietà utili da reciclare */
@@ -180,17 +180,11 @@ padding-top: 80px;
 #test-sx-top h1{
     font-size: 40px;
 }
-#test-sx-bottom{
-    width: 30%;
-    float: left;
-    background-color: white;
-    padding: 8px;
-}
 
-/* .effetto:hover{
-    box-shadow: 10px 10px 10px 10px rgba(51,71,91,0.12);
-    padding: 5px;
-} */
+.effetto:hover{
+    box-shadow: 12px 10px 10px 12px rgba(51,71,91,0.12);
+    /* padding: 5px; */
+}
 #text-dx-top-effetto:hover {
     /* background-color: rgba(51,71,91,0.12);
     background-image: linear-gradient(to top right, #fef8f0, #fff3ee, #fff1ee); */
@@ -229,6 +223,36 @@ float: right;
 margin: 25px;
 }
 
+#test-sx-bottom{
+float:left;
+width: 30%;
+padding-right: 2%;
+background-color: white;
+border: 2px solid black;
+/* padding: 8px; */
+}
+
+#test-cx-bottom{
+    float: left;
+    width: 34%;
+    margin-right: 1.5%;
+    margin-left: 1.5%;
+    background-color: white;
+    /* padding: 8px; */
+    border: 2px solid black;
+}
+
+#test-dx-bottom{
+    float: left;
+    width: 33%;
+    background-color: white;
+    /* padding: 8px; */
+    border: 2px solid black;
+}
+
+h3{
+    padding-bottom: 10px;
+}
 
 
 #terza-pagina{
