--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ h3{
     text-align: center; */
 }
 
-#terza-pagina h2{
+.headerterzapagina h2{
     /*padding-left: 90px;
     font-weight: 700;
     width: 56%; */
@@ -293,7 +293,7 @@ h3{
     width: 74%;
 }
 
-#terza-pagina p{
+.headerterzapagina p{
     float: left;
     padding-top: 18px;
     padding-left: 90px;
@@ -332,7 +332,16 @@ border-bottom: none;
     border-right: none;
 }
 #tabella{
-    padding-left: 50%;
+    padding-left: 25%;
+    /* width: 100wh; */
+    text-align: center;
+    padding-bottom: 30px;
+}
+#tabella h2{
+    padding-top: 4%;
+}
+#tabella p{
+    padding: 4%;
 }
 #quarta-pagina{
     height: 100vh;
