--- a/style.css
+++ b/style.css
@@ -256,9 +256,11 @@ background-color: white;
 h3{
     padding-bottom: 10px;
 }
-
+#seconda-pagina-parte-inferiore ul{
+    margin-left: 18px;
+}
 #seconda-pagina-parte-inferiore li{
-    padding-left: 15px;
+    padding-left: 10px;
 }
 
 #seconda-pagina-parte-inferiore .button{
@@ -291,6 +293,7 @@ h3{
     padding-left: 300px;
     font-weight: 700;
     width: 74%;
+    text-align: center;
 }
 
 .headerterzapagina p{
@@ -298,7 +301,7 @@ h3{
     padding-top: 18px;
     padding-left: 90px;
     font-size: 14px;
-    /* text-align: center; */
+    text-align: center;
     padding-left: 300px;
     /* background-color: gold; */
     width: 74%;
@@ -306,10 +309,11 @@ h3{
 #parte-tabella-primariga{
     padding-top: 60px;
     float: left;
+    width: 100%;
 }
 #parte-tabella-secondariga{
-    /* padding-top: 60px; */
     float: left;
+    width: 100%;
 }
 .bordertab{
     border-right: 1px solid white;
@@ -332,10 +336,11 @@ border-bottom: none;
     border-right: none;
 }
 #tabella{
-    padding-left: 25%;
-    /* width: 100wh; */
+    /* padding-left: 25%; */
+    width: 1000px;
     text-align: center;
-    padding-bottom: 30px;
+    margin: auto;
+    /* padding-bottom: 30px; */
 }
 #tabella h2{
     padding-top: 4%;
@@ -343,10 +348,19 @@ border-bottom: none;
 #tabella p{
     padding: 4%;
 }
+#parte-tabella-secondariga{
+
+}
+.blc{
+    width: 25%;
+    padding: 4px;
+}
 #quarta-pagina{
     height: 100vh;
     background-color: #fff;
+    padding-top: 80px;
     }
+
 #quinta-pagina{
     height: 90vh;
     background-color: darkblue;
